# gdrpg

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.ps1
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/gdrpg/: ability.hpp  battle.hpp  combat_context.hpp  combat_log.hpp  creature.hpp  data_loader.hpp  effect.hpp  gdrpg.hpp  item.hpp  persistent_entity.hpp  registry.hpp  stats.hpp  status_effect.hpp  types.hpp  vec3.hpp
core/src/: ability.cpp  battle.cpp  combat_context.cpp  combat_log.cpp  creature.cpp  data_loader.cpp  effect.cpp  item.cpp  persistent_entity.cpp  registry.cpp  stats.cpp  status_effect.cpp
data/: abilities.json  creatures.json  items.json  persistent_entities.json  status_effects.json
demo/: CMakeLists.txt  main.cpp
docs/: design.md
extension/: CMakeLists.txt
extension/src/: gdrpg_battle.cpp  gdrpg_battle.hpp  gdrpg_creature.cpp  gdrpg_creature.hpp  register_types.cpp
godot_example/: combat_demo.gd  combat_demo.gd.uid  gdrpg.gdextension  gdrpg.gdextension.uid  icon.svg.import  main.tscn  project.godot
tests/: CMakeLists.txt  test_battle.cpp  test_creature.cpp  test_data_loader.cpp  test_effects.cpp  test_stats.cpp
